tests/checker/bad/remote_read_spid.scilla
scilla_version 0

contract AddressSPIDField()

transition Test6 (param1 : ByStr20 with contract field f : Uint128 end)
  x <-& param1._this_address
end
